--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-
-  "name": "newapp",
+  "homepage": "https://vanshika898.github.io/app-redesign",
+  "name": "newapp-copy",
 
   "version": "0.1.0",
 
@@ -45,6 +45,8 @@
   "scripts": {
 
     "start": "react-scripts start",
+    "predeploy":"npm run build",
+    "deploy ":"gh-pages -d build",
 
     "build": "react-scripts build",
 
